--- a/P1-LesBasesImperatives/CH8-LesBoucles/Chapter.tex
+++ b/P1-LesBasesImperatives/CH8-LesBoucles/Chapter.tex
@@ -1,4 +1,4 @@
-\chapter{Les Boucles}
+\chapter{Les boucles}
 Dans ce dernier chapitre avant votre premier chapitre de TP,
 nous allons voir comment répéter des instructions un nombre variable de fois.
 \section{Les boucles while et do-while}
