--- a/Reference/Character/SpecialCharacter.tex
+++ b/Reference/Character/SpecialCharacter.tex
@@ -1,10 +1,10 @@
 % à vérifier
 % Source : C99 last draft.
-\verb"\\" & permet d'insérer un \verb"\" sans qu'il soit interprété. \\ \hline
-\verb"\0" & Caractère nul. Utilisé en C pour marquer la fin d'une chaine, en Swift il est simplement ignoré. \\ \hline
-\verb"\n" & Nouvelle ligne.(Unix) \\ \hline
-\verb"\r" & Retour chariot.(Utilisé sur d'autres systèmes) \\ \hline
+\verb"\\" & Permet d'insérer un \verb"\" sans qu'il soit interprété. \\ \hline
+\verb"\0" & Caractère nul. Utilisé en C pour marquer la fin d'une chaîne ; en Swift, il est simplement ignoré. \\ \hline
+\verb"\n" & Nouvelle ligne (Unix). \\ \hline
+\verb"\r" & Retour chariot (Utilisé sur d'autres systèmes). \\ \hline
 \verb"\t" & Tabulation horizontale. \\ \hline
-\verb'\"' & Guillemet double : ". \\ \hline
-\verb"\'" & Guillemet simple : '. \\ \hline
-\verb"\u{n}" & Caractère unicode arbitraire de code hexadécimal n. \\ \hline
+\verb'\"' & Guillemet double : \verb'"'. \\ \hline
+\verb"\'" & Guillemet simple : \verb"'". \\ \hline
+\verb"\u{n}" & Caractère Unicode arbitraire de code hexadécimal $n$. \\ \hline
