--- a/P1-LesBasesImperatives/CH7-LesConditions/Chapter.tex
+++ b/P1-LesBasesImperatives/CH7-LesConditions/Chapter.tex
@@ -1,20 +1,20 @@
-\chapter{Les Conditions}
+\chapter{Les conditions}
 Après le chapitre précédent assez théorique, ce chapitre vous permettra enfin de réaliser des programmes un peu plus intéressants.
-\section{Si ... Alors... Sinon ...}
+\section{Si… Alors… Sinon …}
 \emph{<< C'est bien joli, les booléens, mais à quoi servent-ils ? >>}
 Une première utilisation des booléens est le <<\emph{branchement conditionnel}>>.
 \subsection{Exécuter des instructions uniquement lorsque une condition est vérifiée}
-On va prendre un exemple, on suppose que vous avez obtenu de l'utilisateur deux nombres a et b, stockés dans deux variables, pour calculer le quotient $\frac{a}{b}$.
-Cependant, si b est nul, vous ne pouvez pas effectuer la division. %Not true anymore (En fait en Swift, avec des nombres à virgule vous obtiendrez $\pm \infty$)
+On va prendre un exemple : on suppose que vous avez obtenu de l'utilisateur deux nombres $a$ et $b$, stockés dans deux variables, pour calculer le quotient $\frac{a}{b}$.
+Cependant, si $b$ est nul, vous ne pouvez pas effectuer la division. %Not true anymore (En fait en Swift, avec des nombres à virgule vous obtiendrez $\pm \infty$)
 
-On se propose de vérifier si b est nul et d'écrire un message à la console dans ce cas.
+On se propose de vérifier si $b$ est nul et d'écrire un message à la console dans ce cas.
 
 Grâce au chapitre précédent, vous pouvez me trouver le condition correspondante.
 
 \pagebreak % No cheating
 \mintinline{swift}{b == 0}, comme vous avez tous trouvé (sans tricher).
 
-Pour exécuter \mintinline{swift}{println("b est nul ! Division impossible")}, nous allons utiliser notre première instruction composée : \mintinline{swift}{if}
+Pour exécuter \mintinline{swift}{println("b est nul ! Division impossible.")}, nous allons utiliser notre première instruction composée : \mintinline{swift}{if}.
 
 \begin{listing}[h]
 \begin{minted}[linenos]{swift}
@@ -22,28 +22,28 @@ let b = 0
 
 // /!\ Abus de commentaire
 
-if b == 0 /*Condition*/ { // Condition non nécessairement entre parenthèse
-    // Code à exécuter si la conditions est vérifié
+if b == 0 /*Condition*/ { // Condition non nécessairement entre parenthèses
+    // Code à exécuter si la conditions est vérifié.
     // Éventuellement plusieurs instructions.
-    println("b est nul ! Division impossible")
+    println("b est nul ! Division impossible.")
 } // Les accolades ouvrantes et fermantes pourraient respectivement
   // être mise une ligne après le if,
   // ou sur la même ligne que la dernière instruction.
 // Code exécuté dans tout les cas.
 \end{minted}
-\caption{la syntaxe de if}
+\caption{la syntaxe de if.}
 \end{listing}
 \paragraph{Deux commentaires pour ceux qui ont déjà programmé
-dans un langage utilisant la syntaxe du C :}
+dans un langage utilisant la syntaxe du C.}
 \begin{itemize}
 \item Les parenthèses autour de la condition ne sont pas nécessaires,
-et sont en général omise dans la doc d'Apple.
-\item Les accolades ne peuvent par contre pas être omise,
+et sont en général omises dans la doc d'Apple.
+\item Les accolades ne peuvent par contre pas être omises,
 même s'il n'y a qu'une instruction à exécuter
-\footnote{Chercher "goto fail" sur Google}.
+\footnote{Apple à retenu la leçon, cherchez \og goto fail \fg{} dans Google.}.
 \end{itemize}
 \subsection{Et dans le cas contraire ?}
-Évidement maintenenant que l'on  a testé la valeur de b, il faut n'exécuter la division que si b est non nul.
+Évidement, maintenant que l'on a testé la valeur de $b$, il faut n'exécuter la division que si $b$ est non nul.
 La solution que vous pourriez envisager est de faire ensuite
 \mintinline{swift}{if b != 0},
 mais il existe une solution plus claire : \mintinline{swift}{else}.
@@ -60,38 +60,38 @@ if b == 0 {
 }
 // Code exécuté dans tout les cas.
 \end{minted}
-\caption{la syntaxe de if}
+\caption{la syntaxe de \mintinline{swift}{if … else}}
 \end{listing} %\)
 
-Il est bien sur possible d'imbriquer des if à l'intérieur des accolades.
+Il est bien sûr possible d'imbriquer des \mintinline{swift}{if} à l'intérieur des accolades.
 \subsection{Else if, exécuter des tests plus complexes}
-Il est enfin possible de traiter des cas plus complexe avec \mintinline{swift}{else if}, << sinon si >> :
+Il est enfin possible de traiter des cas plus complexe avec \mintinline{swift}{else if}, << sinon si >>.
 
 \begin{listing}[h]
 \begin{minted}[linenos]{swift}
 if condition1 {
-    // code à exécuter si 1 est vérifiée.
+    // Code à exécuter si 1 est vrai.
 }
 else if condition 2
 {
-    // code à exécuter si 1 n'est pas vrai et que 2 est vrai.
+    // Code à exécuter si 1 n'est pas vrai et que 2 est vrai.
 } else if condition 3 {
-    // code à exécuter si 1 et 2 fausses et 3 vrai 
+    // Code à exécuter si 1 et 2 sont faux et 3 vrai .
 }
-/* ... Avec autant de condition nécessaires */
+/* … Avec autant de condition que nécessaires */
 /* De façon optionnelle, un unique else, à exécuter si aucune des condition n'a été vérifiée. */
 else {
-    // code à exécuter si aucune  condition n'est vérifié.
+    // Code à exécuter si aucune  condition n'est vérifiée.
 }
 // Code à exécuter dans tout les cas.
 \end{minted}
-\caption{if, else if, else}
+\caption{\mintinline{swift}{if}, \mintinline{swift}{else if}, \mintinline{swift}{else}}
 \end{listing}
 \section{Quelques généralités sur les instructions composées}
-Lorsque vous voyez apparaître de accolades, vous entrez dans un nouveau bloc de code, dans ce bloc, toutes les variables que vous déclarerez ne serons déclarés que dans ce bloc, et ne seront plus accessible une fois que vous en serez sorti. On parle de variable locales. Dans certain cas une variable locale est définie sur la ligne introduisant l'instruction composée.
+Lorsque vous voyez apparaître de accolades, vous entrez dans un nouveau bloc de code, dans ce bloc, toutes les variables que vous déclarerez ne serons déclarées que dans ce bloc, et ne seront plus accessible une fois que vous en serez sorti. On parle de variable locales. Dans certain cas une variable locale est définie sur la ligne introduisant l'instruction composée.
 
-On peut, par contre, accéder aux variables définis à l'extérieur de ce bloc, dite globales.
-\section{Application : Une année est elle bissextile ?}
+On peut, par contre, accéder aux variables définies à l'extérieur de ce bloc, dite globales.
+\section{Application : une année est elle bissextile ?}
 Après un début de chapitre quelque peu théorique, je vous propose un premier exercice un peu sérieux.
 \subsection{Consignes}
 Je vous demande d'écrire un code qui déclare une constante contenant une année
@@ -99,9 +99,9 @@ Je vous demande d'écrire un code qui déclare une constante contenant une anné
 puis détermine si cette année est bissextile,
 en affichant sur la sortie standard l'information.
 
-Je rappelle à toute fin utile qu'une année sur quatre est bissextile,
+Je rappelle à toute fin utiles qu'une année sur quatre est bissextile,
 sauf pour les années qui sont un multiple de 100, qui ne sont pas bissextile,
-sauf (encore un exception !) lorsque qu'elles sont multiple de 400.
+sauf (encore une exception !) lorsque qu'elles sont multiples de 400.
 \subsection{Indications}
 
 Ceci est votre premier TP, ne vous inquiétez pas si ce n'est pas évident.
@@ -113,7 +113,7 @@ Ceci est votre premier TP, ne vous inquiétez pas si ce n'est pas évident.
 \item Pour savoir si un nombre est multiple d'un autre,
 rien de mieux que le reste de la division euclidienne.
 
-\item Un ou plusieurs if (et éventuellement else), comme vous voulez.
+\item Un ou plusieurs \mintinline{swift}{if} (et éventuellement \mintinline{swift}{else}), comme vous voulez.
 \end{itemize}
 \pagebreak % Let's not cheat
 \subsection{Corrections}
@@ -134,10 +134,10 @@ if année % 4 == 0 {
         println("Bissextile")
     }
 } else {
-    println("Pas Bissextile")
+    println("Pas bissextile")
 }
 \end{minted}
-\caption{Méthode bourrin}
+\caption{Méthode bourrin.}
 \end{listing}
 Ce n'est pas la méthode la plus lisible,
 même si c'est la plus évidente pour le débutant.
@@ -148,31 +148,31 @@ let année = 2000 // Attention BUG ! ;)
 if année % 400 == 0 {
     println("Bissextile")
 } else if année % 100 == 0 {
-    println("Pas Bissextile")
+    println("Pas bissextile")
 } else if année % 4 == 0 {
     println("Bissextile")
 } else {
-    pintln("Pas Bissextile")
+    pintln("Pas bissextile")
 }
 \end{minted}
-\caption{Un peu plus élégant}
+\caption{Un peu plus élégant.}
 \end{listing}
-C'est un peu moins brouillon, mais (comme précédemment), on duplique les lignes <<bissextile>> et <<pas bissextile>>, ce qui n'est pas génial. De plus pour une année non multiple de 4 (a priori le plus fréquent), on effectue tout les tests alors que l'on pourrait conclure immédiatement.
+C'est un peu moins brouillon, mais (comme précédemment), on duplique les lignes << bissextile >> et << pas bissextile >>, ce qui n'est pas génial. De plus, pour une année non multiple de 4 (a priori le plus fréquent), on effectue tous les tests alors que l'on pourrait conclure immédiatement.
 
 \begin{listing}[h!]
 \begin{minted}[linenos]{swift}
 let année = 1995
 if année % 4 != O {
-    println("Pas Bissextile")
+    println("Pas bissextile")
 } else if année % 100 != 0 {
     println("Bissextile")
 } else if année % 400 != 0 {
-    println("Pas Bissextile")
+    println("Pas bissextile")
 } else {
     println("Bissextile")
 }
 \end{minted}
-\caption{Méthode élégante optimisée}
+\caption{Méthode élégante optimisée.}
 \end{listing}
 Voilà qui est plus optimisé, mais il reste à résoudre la duplication de code :
 
@@ -188,21 +188,21 @@ if année % 4 != 0 || (année % 100 == 0 && année % 400 != 0) {
 \caption{Méthode experte !}
 \end{listing}
 
-Je vous conseil de ne pas attaquer le chapitre suivant
-si vous ne comprenez pas ces quatre correction,
-et sans avoir essayé les petits exercices facile qui suivent.
+Je vous conseille de ne pas attaquer le chapitre suivant
+si vous ne comprenez pas ces quatre corrections,
+et sans avoir essayé les petits exercices faciles qui suivent.
 \subsection{Variantes}
 Essayez de refaire cela:
 \begin{itemize}
 
-\item En affichant l'année si ce n'est pas déjà fait.
-\item En stockant l'information dans un booléen.
-\item En n'obtenant cela sans if, juste avec un grosse condition.
+\item en affichant l'année si ce n'est pas déjà fait ;
+\item en stockant l'information dans un booléen ;
+\item en n'obtenant cela sans \mintinline{swift}{if}, juste avec un grosse condition.
 
 \end{itemize}
-\section{Effectuer un disjonction de cas : switch...case}
+\section{Effectuer un disjonction de cas : switch … case}
 Il existe une deuxième syntaxe permettant de créer des branchements :
-\mintinline{swift}{switch...case}.
+\mintinline{swift}{switch … case}.
 Il s'agit de choisir un bloc à exécuter selon la valeur d'une variable.
 \paragraph{Attention :}Cette Syntaxe diffère de celle du C de façon importante.
 
@@ -223,16 +223,16 @@ default :
 
 }
 \end{minted}
-\caption{Syntaxe basique de switch}
+\caption{Syntaxe basique de \mintinline{swift}{switch}}
 \end{listing}
 \paragraph{Un cas vide}
-Je détaillerai le rôle de break par la suite, mais sachez que pour qu'un cas vide accepte de compiler, il suffit de mettre l'instruction \mintinline{swift}{break} là ou le code est attendu.
+Je détaillerai le rôle de \mintinline{swift}{break} par la suite, mais sachez que pour qu'un cas vide accepte de compiler, il suffit de mettre l'instruction \mintinline{swift}{break} là ou le code est attendu.
 
 
 \section*{Conclusion}
 \phantomsection
 \addcontentsline{toc}{section}{Conclusion}
-Dans ce chapitre vous avez appris à utiliser des conditions pour effectuer des branchements conditionnels, avec deux structures, \mintinline{swift}{if} ... \mintinline{swift}{else if} ... \mintinline{swift}{else}, et \mintinline{swift}{switch} ... \mintinline{swift}{case}.
+Dans ce chapitre vous avez appris à utiliser des conditions pour effectuer des branchements conditionnels, avec deux structures, \mintinline{swift}{if} … \mintinline{swift}{else if} … \mintinline{swift}{else}, et \mintinline{swift}{switch} … \mintinline{swift}{case}.
 
 Vous avez surtout été confronté à votre première séance de travaux pratiques (TP).
 
@@ -242,13 +242,13 @@ Je vous conseille de vérifier que vous avez bien tout compris et que vous êtes
 \phantomsection
 \addcontentsline{toc}{section}{Exercices}
 Je vous ai déjà laissé quelques exercices après le TP.
-Si vous souhaitez pratiquer plus vous pouvez essayer de faire :
+Si vous souhaitez pratiquer plus vous pouvez essayer de faire un des exercices qui suivent.
 \begin{itemize}
-\item Un programme qui dit si un nombre est paire ou impaire
-\emph{(Bonus, faire cela avec un nombre à virgule)}, positif ou négatif.
+\item Un programme qui dit si un nombre est pair ou impair,
+\emph{(bonus, faire cela avec un nombre à virgule)}, positif ou négatif.
 \item Un programme qui dit si un nombre est paire ou impaire en utilisant un \mintinline{swift}{switch}.
 \item Un programme qui dit si un nombre à virgule est un entier.
 \end{itemize}
 
-Je n'ai pas beaucoup d'exercice pratiques à vous proposer car le TP reprend assez bien toutes les notions déjà exposée.
+Je n'ai pas beaucoup d'exercices pratiques à vous proposer car le TP reprend assez bien toutes les notions déjà exposées.
 
