--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -1,4 +1,4 @@
-\part{Bases de la programmation impérative et fonctionnelle}
+\part{Bases de la programmation impérative et procédurale}
 
 Dans cette partie, nous allons découvrir ce que sont
 la programmation impérative et la programmation fonctionnelle,
