Cleans up Preface

--- a/Preface.tex
+++ b/Preface.tex
@@ -3,12 +3,12 @@
 \addcontentsline{toc}{chapter}{Préface}
 Vous avez un Mac, vous avez toujours rêver d'écrire des applications, ou d'apprendre à programmer ?
 Ce tutoriel est pour vous.
-Vous y apprendrez à programmer à partir de zéro %Zér0\footnote{Dédicace à feu le site du Zér0} 
-en utilisant le nouveau langage d'Apple, Swift, puis à écrire vos premières applications graphiques.
+Vous y apprendrez à programmer à partir de  Zér0\footnote{Dédicace à feu le site du Zér0} 
+en utilisant le nouveau langage d'Apple, Swift, dans sa deuxième version, puis à écrire vos premières applications graphiques.
 
 C'est mon premier gros cours, donc n'hésitez pas à faire remonter tout ce qui vous semble utile de rapporter.
 
-Les Sources LaTeX et le "bugtracker" se trouvent \TSwiftUrl{https://github.com/GuillaumeDIDIER/TutorielSwift}{sur le dépot github ici}{Dépot Github du tutoriel}
+Les sources de la version LaTeX et le "bugtracker" se trouvent \TSwiftUrl{https://github.com/GuillaumeDIDIER/TutorielSwift}{sur le dépot github ici}{Dépot Github du tutoriel}
 Le PDF du cours est aussi disponible de façon provisoire \TSwiftUrl{https://onedrive.live.com/redir?resid=E2E36645B7EB4EE3!168&authkey=!AOH8IUaG-amgJ38&ithint=file\%2cpdf}{ici}{PDF du cours}.
 
 En étudiant ce cours
@@ -17,5 +17,3 @@ vous acquerrez de véritables méthodes et compétences en programmation,
 par le biais de nombreux exercices parsemé à travers ces pages.
 
 Cher lecteur si tu es d'accord avec ce projet, accroches-toi et attention pour le décollage.
-
-% Todo : Photo rafale PC au décollage.
