--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -30,9 +30,9 @@ En effet, pour bien acquérir un cours, il faut :
 \begin{description}
 \item[le comprendre],
 car on ne peut pas retenir et appliquer un cours sans le comprendre ;
-\item[Le reprendre] plusieurs fois,
+\item[le reprendre] plusieurs fois,
 car une bonne mémorisation ne peut se faire qu'à ce prix ;
-\item[Le pratiquer],
+\item[le pratiquer],
 c'est à dire ne pas copier coller bêtement mon code sans le comprendre.
 C'est en \emph{cherchant} que l'on tire le meilleur profit d'un exercice :
 \og \emph{Tiens, j'ai essayé ça, Pourquoi cela n'a il pas marché ?} \fg{}
