Updates swift history.

--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -160,6 +160,12 @@ par la manière qu'a le C de gérer la mémoire.
 Le but était de créer un langage puissant, rapide, et sécurisé, mais avec une syntaxe
 aussi agréable à utiliser qu’un langage de script,
 et beaucoup plus accessible aux débutants que l'Objective-C.
+
+Swift à ensuite été mis à jour en 1.1 puis 1.2 pendant l'année 2014 -- 2015.
+
+Enfin en Juin 2015, la version 2 de Swift a été dévoilée pendant la WWDC.
+
+Il a enfin été annoncé que swift et sa librairie standard seront rendu opensource avant la fin 2015. Apple fournira même un port GNU/Linux.
 \section{Les outils du programmeur}
 Si vous avez bien lu la partie précédente, vous devriez déjà en avoir identifié un.
 
