--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -1,7 +1,7 @@
 \part{Bases de la programmation impérative et fonctionnelle}
 
 Dans cette partie, nous allons découvrir ce que sont
-la programmation impérative et la programmation fonctionnelle,
+la programmation impérative et la programmation procédurale,
 et acquérir les bases de l’algorithmie.
 
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter}
