--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter.tex
@@ -50,14 +50,7 @@ ne sont pas indispensables à la suite du cours.
 Elles sont là pour la culture, ou par soucis d'exhaustivité,
 ou encore s'adressent à un public particulier.
 Vous pouvez les laisser de côté lors d'une première lecture.
-\subsection{Risque d’évolution}
-Ce cours est susceptible d'évoluer rapidement,
-du fait que Swift n'est pas encore stabilisé.
 
-Le site
-\TSwiftUrl{https://github.com/ksm/SwiftInFlux/blob/master/README.md}{SwiftInFlux}{SwiftInFlux} 
-répertorie les évolutions de Swift,
-y compris celles qui ne sont encore qu'envisagées.
 \section{Quelques notions sur le fonctionnement d'un ordinateur}
 \subsection{Qu'est-ce qu'un ordinateur ?}
 Qu'est-ce qu'un ordinateur ?
@@ -167,6 +160,12 @@ par la manière qu'a le C de gérer la mémoire.
 Le but était de créer un langage puissant, rapide, et sécurisé, mais avec une syntaxe
 aussi agréable à utiliser qu’un langage de script,
 et beaucoup plus accessible aux débutants que l'Objective-C.
+
+Swift à ensuite été mis à jour en 1.1 puis 1.2 pendant l'année 2014 -- 2015.
+
+Enfin en Juin 2015, la version 2 de Swift a été dévoilée pendant la WWDC.
+
+Il a enfin été annoncé que swift et sa librairie standard seront rendu opensource avant la fin 2015. Apple fournira même un port GNU/Linux.
 \section{Les outils du programmeur}
 Si vous avez bien lu la partie précédente, vous devriez déjà en avoir identifié un.
 
